[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Vladislav Vasilev <akiro_jpg@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

